<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainPage">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/todo"
        />

    <EditText
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:autofillHints="save name"
        android:hint="@string/save_name"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:id="@+id/name"/>
    <Button
        android:id="@+id/browse"
        android:layout_width="263dp"
        android:layout_height="43dp"
        android:layout_marginLeft="50dp"
        android:text="@string/browse"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/camera"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/save"
        android:layout_marginStart="50dp" />

    <Button
        android:id="@+id/home"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/home"
        android:layout_marginStart="50dp" />
    <Button
        android:id="@+id/show_all"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/show_all"
        android:layout_marginStart="50dp" />




</LinearLayout>